--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
 
     // Use the Sceneform Ux Package pre-built from Maven.
-    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.5.1"
+    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.7.0"
 
     // Use the Sceneform Ux Package built from the source files included in the sceneformux folder.
     //api project(":sceneformux")
@@ -91,3 +91,8 @@ app/sampledata/models (you will see similar files already in that place). next r
 on the obj file and import sceneform assets, making sure it matches the file path of the objs
 above that have already been imported.
  */
+
+sceneform.asset('sampledata/models/chroma_key_video.obj',
+        'default',
+        'sampledata/models/chroma_key_video.sfa',
+        'src/main/assets/models/chroma_key_video')
