--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ sceneform.asset('sampledata/models/fancyballroom.obj',
 
 sceneform.asset('sampledata/models/beachflag.obj',
         'default',
-        'sampledata/models/beachcflag.sfa',
+        'sampledata/models/beachflag.sfa',
         'src/main/assets/models/beachflag')
 
 sceneform.asset('sampledata/models/beachcroc.obj',
@@ -92,10 +92,10 @@ sceneform.asset('sampledata/models/beachcroc.obj',
         'sampledata/models/beachcroc.sfa',
         'src/main/assets/models/beachcroc')
 
-sceneform.asset('sampledata/models/elephant.obj',
+sceneform.asset('sampledata/models/bigger_elephant.obj',
         'default',
-        'sampledata/models/elephant.sfa',
-        'src/main/assets/models/elephant')
+        'sampledata/models/bigger_elephant.sfa',
+        'src/main/assets/models/bigger_elephant')
 
 sceneform.asset('sampledata/models/firebreathingchicken.obj',
         'default',
@@ -126,3 +126,8 @@ sceneform.asset('sampledata/models/waterfall.obj',
         'default',
         'sampledata/models/waterfall.sfa',
         'src/main/assets/models/waterfall')
+
+sceneform.asset('sampledata/models/chroma_key_video.obj',
+        'default',
+        'sampledata/models/chroma_key_video.sfa',
+        'src/main/assets/chroma_key_video')
