--- a/build.gradle
+++ b/build.gradle
@@ -12,143 +12,31 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
- apply plugin: 'com.android.application'
+// Top-level build file where you can add configuration options common to
+// all sub-projects/modules.
 
-android {
-    compileSdkVersion 27
-    defaultConfig {
-        applicationId "com.google.ar.sceneform.samples.augmentedimage"
-
-        // 24 is the minimum since Sceneform requires Android N.
-        minSdkVersion 24
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
-
-      ndk {
-        /*
-         * Sceneform is available for the following ABIs: arm64-v8a, armeabi-v7a,
-         * x86_64 and x86. This sample app enables arm64-v8a to run on
-         * devices and x86 to run on the emulator. Your application should
-         * list the ABIs most appropriate to minimize APK size (arm64-v8a recommended).
-         */
-        abiFilters 'arm64-v8a', 'x86'
-      }
+buildscript {
+    repositories {
+        google()
+        jcenter()
+        mavenLocal()
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.google.ar.sceneform:plugin:1.5.1'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-
-    // Use the Sceneform Ux Package pre-built from Maven.
-    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.5.1"
-
-    // Use the Sceneform Ux Package built from the source files included in the sceneformux folder.
-    //api project(":sceneformux")
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        mavenLocal()
+    }
 }
 
-apply plugin: 'com.google.ar.sceneform.plugin'
-
-/* in order to add a new 3d object, move the obj file, mtl file and png file to
-app/sampledata/models (you will see similar files already in that place). next right click
-on the obj file and import sceneform assets, making sure it matches the file path of the objs
-above that have already been imported.
- */
-
-sceneform.asset('sampledata/models/Car.obj',
-        'default',
-        'sampledata/models/Car.sfa',
-        'src/main/assets/models/Car')
-
-sceneform.asset('sampledata/models/sushi.obj',
-        'default',
-        'sampledata/models/sushi.sfa',
-        'src/main/assets/models/sushi')
-
-sceneform.asset('sampledata/models/fancyballroom.obj',
-        'default',
-        'sampledata/models/fancyballroom.sfa',
-        'src/main/assets/models/fancyballroom')
-
-sceneform.asset('sampledata/models/beachflag.obj',
-        'default',
-        'sampledata/models/beachflag.sfa',
-        'src/main/assets/models/beachflag')
-
-sceneform.asset('sampledata/models/beachcroc.obj',
-        'default',
-        'sampledata/models/beachcroc.sfa',
-        'src/main/assets/models/beachcroc')
-
-sceneform.asset('sampledata/models/bigger_elephant.obj',
-        'default',
-        'sampledata/models/bigger_elephant.sfa',
-        'src/main/assets/models/bigger_elephant')
-
-sceneform.asset('sampledata/models/firebreathingchicken.obj',
-        'default',
-        'sampledata/models/firebreathingchicken.sfa',
-        'src/main/assets/models/firebreathingchicken')
-
-sceneform.asset('sampledata/models/lavaeye.obj',
-        'default',
-        'sampledata/models/lavaeye.sfa',
-        'src/main/assets/models/lavaeye')
-
-sceneform.asset('sampledata/models/skater.obj',
-        'default',
-        'sampledata/models/skater.sfa',
-        'src/main/assets/models/skater')
-
-sceneform.asset('sampledata/models/ufosighting.obj',
-        'default',
-        'sampledata/models/ufosighting.sfa',
-        'src/main/assets/models/ufosighting')
-
-sceneform.asset('sampledata/models/waterfall.obj',
-        'default',
-        'sampledata/models/waterfall.sfa',
-        'src/main/assets/models/waterfall')
-
-sceneform.asset('sampledata/models/chroma_key_video.obj',
-        'default',
-        'sampledata/models/chroma_key_video.sfa',
-        'src/main/assets/chroma_key_video')
-
-
-sceneform.asset('sampledata/models/couple_beach.obj',
-        'default',
-        'sampledata/models/couple_beach.sfa',
-        'src/main/assets/couple_beach')
-
-sceneform.asset('sampledata/models/frame_lower_left.obj',
-        'default',
-        'sampledata/models/frame_lower_left.sfa',
-        'src/main/assets/frame_lower_left')
-
-sceneform.asset('sampledata/models/frame_lower_right.obj',
-        'default',
-        'sampledata/models/frame_lower_right.sfa',
-        'src/main/assets/frame_lower_right')
-
-sceneform.asset('sampledata/models/frame_upper_right.obj',
-        'default',
-        'sampledata/models/frame_upper_right.sfa',
-        'src/main/assets/frame_upper_right')
-
-sceneform.asset('sampledata/models/frame_upper_left.obj',
-        'default',
-        'sampledata/models/frame_upper_left.sfa',
-        'src/main/assets/frame_upper_left')
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
